SigmaCodebackup3rdSep/objects/Manufacturing_Run_ILPs__c.object
<CustomObject>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Manufacturing Run ILPs</relationshipLabel>
        <relationshipName>Manufacturing_Run_ILPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location</label>
        <referenceTo>Inventory_Location__c</referenceTo>
        <relationshipLabel>Manufacturing Run ILPs</relationshipLabel>
        <relationshipName>Manufacturing_Run_ILPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run__c</fullName>
        <label>Manufacturing Run</label>
        <referenceTo>Manufacturing_Run__c</referenceTo>
        <relationshipLabel>Manufacturing Run ILPs</relationshipLabel>
        <relationshipName>Manufacturing_Run_ILPs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Produced_Quantity__c</fullName>
        <label>Produced Quantity</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Manufacturing Run ILPs</relationshipLabel>
        <relationshipName>Manufacturing_Run_ILPs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Manufacturing Run ILP</label>
    <nameField>
        <displayFormat>MRILP-{00000}</displayFormat>
        <label>Manufacturing Run ILP Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run ILPs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>